--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "swihost",
-  "version": "2.0.4",
+  "version": "2.0.5",
   "main": "main.js",
   "description": "Easy to change and switch the host file.",
   "author": "lleeoo",
   "devDependencies": {
-    "electron": "^1.8.4"
+    "electron": "^1.8.7",
+    "electron-builder": "^20.15.1"
   },
   "dependencies": {
     "electron-updater": "^2.21.3"
@@ -42,6 +43,7 @@
     }
   },
   "scripts": {
-    "dist": "electron-builder -wm"
+    "start": "electron .",
+    "build": "electron-builder -w -p always"
   }
 }
